@@ -5,6 +5,7 @@
 	<arg_index>index</arg_index>
 	<arg_query>query</arg_query>
 	<arg_get>get</arg_get>
+	<arg_num_indexes>num_indexes</arg_num_indexes>
 	<output_delimeter>!</output_delimeter>
 	<index_order>hrStorageDescr:hrStorageIndex</index_order>
 	<index_order_type>numeric</index_order_type>
